# stock_vpa

./: .env.example  .gitignore  README.md  config.json.example  pyproject.toml
src/: __main__.py  analyzer.py  config.py  stock_map.py  stock_reader.py  vpa_analyzer.py  vpa_features.py  vpa_indicators.py  weekly_reader.py
