[project]
name = "stock-vpa"
version = "0.1.0"
description = "A-share Volume-Price Analysis Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mootdx>=0.11.7",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.24.0",
]
